<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".Dificultad">

    <FrameLayout
        android:layout_width="290dp"
        android:layout_height="418dp"
        android:background="#90a4ae"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDificultad"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationX="90dp"
            android:translationY="50dp" />

        <Button
            android:id="@+id/btnDificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAtras"
            android:translationX="100dp"
            android:translationY="280dp" />

        <RadioGroup
            android:layout_width="183dp"
            android:layout_height="143dp"
            android:translationX="50dp"
            android:translationY="100dp">

            <RadioButton
                android:id="@+id/chkFacil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtFacil"
                android:translationY="20dp" />

            <RadioButton
                android:id="@+id/chkDificil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDificil"
                android:translationY="25dp" />
        </RadioGroup>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>