<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03a9f4"
    tools:context=".comoJugar">

    <FrameLayout
        android:layout_width="298dp"
        android:layout_height="481dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="153dp"
            android:layout_height="31dp"
            android:text="@string/TxtComoJugar"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationX="80dp"
            android:translationY="100dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="222dp"
            android:layout_height="88dp"
            android:text="@string/TxtInstrucciones"
            android:textSize="20sp"
            android:translationX="40dp"
            android:translationY="200dp" />

        <Button
            android:id="@+id/btnAtras"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAtras"
            android:translationX="98dp"
            android:translationY="350dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>