<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".ModoDificil">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="380dp"
        android:layout_height="528dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#B4607D8B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnPuntos"
        app:layout_constraintVertical_bias="0.134">

        <Button
            android:id="@+id/btn1ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="10dp"
            android:translationY="10dp" />

        <Button
            android:id="@+id/btn2ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="190dp"
            android:translationY="10dp" />

        <Button
            android:id="@+id/btn3ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="10dp"
            android:translationY="180dp" />

        <Button
            android:id="@+id/btn4ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="190dp"
            android:translationY="180dp" />

        <Button
            android:id="@+id/btn5ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="190dp"
            android:translationY="350dp" />

        <Button
            android:id="@+id/btn6ModoDificil"
            android:layout_width="175dp"
            android:layout_height="165dp"
            android:background="#72CC0000"
            android:translationX="10dp"
            android:translationY="350dp" />
    </FrameLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtPuntaje"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/txtnPuntos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtNivel"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNivel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtnPuntos"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNivel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="textStart"
        android:textSize="23sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btniniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnIniciarPartida"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/btnSalir"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>